# am-user-management

./: .env.docker  .env.example  .gitignore  IMPLEMENTATION_SUMMARY.txt  INTEGRATION_SUMMARY_SHORT.txt  POSTMAN_API_TESTING.md  POSTMAN_GUIDE.md  PRODUCTION_GUIDE.md  README.md  am_user_management.db-shm  am_user_management.db-wal  debug_login.py  debug_login_process.py  docker-compose.yml  main.py  main_integrated.py  main_simple.py  postman_collection.json  pyproject.toml  pytest.ini  requirements.txt  test_api.py
core/: __init__.py
core/interfaces/: __init__.py  event_bus.py  repository.py
core/value_objects/: __init__.py  email.py  phone_number.py  user_id.py
modules/: __init__.py
modules/account_management/: __init__.py
modules/account_management/api/: service_registration.py
modules/account_management/api/internal/: user_internal_api.py
modules/account_management/api/public/: auth_router.py  schemas.py
modules/account_management/application/services/: email_service.py  password_hasher.py
modules/account_management/application/use_cases/: create_user.py  login.py  reset_password.py  verify_email.py
modules/account_management/config/: settings.py
modules/account_management/domain/enums/: user_status.py
shared_infra/: __init__.py  di_container.py
shared_infra/config/: feature_flags.py  settings.py
shared_infra/database/: base.py  config.py  session.py
shared_infra/events/: mock_event_bus.py
shared_infra/logging/: logger.py
tests/: __init__.py
tests/api/: __init__.py  test_api.sh  test_integrated_api.py
(+10 files in other folders)
